--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
   <dependencies>
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring.context</artifactId>
+      <artifactId>spring-context</artifactId>
       <version>6.0.0</version>
     </dependency>
     <dependency>
